<resources>
    <string name="app_name">IntentErni</string>
    <string name="move_activity">PINDAH AKTIVITI</string>
    <string name="move_with_data">PINDAH AKTIVITI DENGAN DATA</string>
    <string name="dial_number">PANGGIL TELEPON</string>
    <string name="move_with_result">PINDAH AKTIVITI UNTUK RESULT</string>
    <string name="result_from_activity">HASIL DARI AKTIVITI</string>
    <string name="choose_activity">APA AKTIVITAS YANG KAMU SUKA?</string>
    <string name="film">MENONTON FILM</string>
    <string name="rebahan">REBAHAN</string>
    <string name="cuci_baju">MENCUCI BAJU</string>
    <string name="sukasuka">NONGKRONG DI WARUNG KOPI</string>
    <string name="soksibuk">MENGERJAKAN TUGAS</string>
    <string name="choose">AYOK PILIH</string>
    <string name="data_received">DATA DITERIMA</string>
    <string name="this_ismove_activity">INI PINDAH AKTIVITI</string>
    <string name="_backto_main_page">KEMBALI KE HALAMAN UTAMA</string>
</resources>